add mirtextfx and mircomposer projects, STC for groovy 4 rc2